@startuml

' ====== Alap entitások ======
class Person
class Employee
class ITEmployee
class UniEmployee

' ====== Enum-ok ======
enum ITPosition
enum UniPosition

' ====== Tervezési minták ======
interface EmployeeFactory
class EmployeeFactoryImpl

interface FileService
class EmployeeFileService
class FileServiceProxy

interface ListIterator
class EmployeeIterator

' ====== Főprogram ======
class App

' ====== Kapcsolatok ======
Person <|-- Employee
Employee <|-- ITEmployee
Employee <|-- UniEmployee

ITEmployee --> ITPosition
UniEmployee --> UniPosition

EmployeeFactory <|.. EmployeeFactoryImpl
EmployeeFactoryImpl ..> Employee

FileService <|.. EmployeeFileService
FileService <|.. FileServiceProxy
FileServiceProxy o-- EmployeeFileService
EmployeeFileService --> Employee

ListIterator <|.. EmployeeIterator
EmployeeIterator --> Employee

App --> EmployeeFactoryImpl
App --> FileServiceProxy
App --> EmployeeIterator
App --> Employee
@enduml
